feat: load program config from yaml

--- a/text-generation/env.template
+++ b/text-generation/env.template
@@ -1,1 +1,1 @@
-HUGGING_FACE_API_TOKEN=<your_token> # Get a token from https://huggingface.co/settings/tokens
+HUGGING_FACE_API_TOKEN=<your_token> # Generate a token at https://huggingface.co/settings/tokens
