--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,6 +1,6 @@
 name: Pylint
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
@@ -20,7 +20,8 @@ jobs:
         pip install pylint
     - name: Analyse the code with pylint
       run: |
-        cd text-generation
+        cd word-frequency
         pylint $(git ls-files '*.py')
-        cd ../word-frequency
+        cd ../text-generation
+        pip install -r requirements.txt
         pylint $(git ls-files '*.py')
